apps/home-assistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.ramoneees.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: wildcard-ramoneees-com-tls
